permission bug resolved